--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   ],
   "dependencies": {
     "bootstrap": "^4.6.0",
-    "normalize.scss": "^0.1.0"
+    "normalize.scss": "^0.1.0",
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -73,6 +73,7 @@
     "json-server": "^0.16.3",
     "mini-css-extract-plugin": "^1.3.4",
     "postcss": "^8.2.4",
+    "postcss-scss": "^3.0.4",
     "postcss-loader": "^4.1.0",
     "postcss-preset-env": "^6.7.0",
     "sass": "^1.32.5",
