--- a/package.json
+++ b/package.json
@@ -28,16 +28,16 @@
     }
   ],
   "scripts": {
-    "start": "concurrently \"npm run dev\" \"npm run json-server\"",
     "build": "webpack --config configuration/webpack.dev.config.js --mode=development",
     "bundle": "npm install && npm run watch",
     "dev": "webpack serve --config configuration/webpack.dev.config.js --mode=development",
+    "json-server": "json-server --watch db.json --port 5000",
     "lint:js": "eslint . --fix",
     "lint:sass": "stylelint \"src/scss/\" --syntax scss",
     "production": "webpack --config configuration/webpack.prod.config.js --mode=production",
+    "start": "concurrently \"npm run dev\" \"npm run json-server\"",
     "stats": "webpack --config configuration/webpack.prod.config.js --mode=production --json > dist/stats.json && webpack-bundle-analyzer dist/stats.json",
-    "watch": "webpack --config configuration/webpack.dev.config.js --mode=development --watch",
-    "json-server": "json-server --watch db.json --port 5000"
+    "watch": "webpack --config configuration/webpack.dev.config.js --mode=development --watch"
   },
   "browserslist": [
     "last 2 versions",
@@ -45,7 +45,7 @@
   ],
   "dependencies": {
     "bootstrap": "^4.6.0",
-    "normalize.scss": "^0.1.0",
+    "normalize.scss": "^0.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -73,9 +73,9 @@
     "json-server": "^0.16.3",
     "mini-css-extract-plugin": "^1.3.4",
     "postcss": "^8.2.4",
-    "postcss-scss": "^3.0.4",
     "postcss-loader": "^4.1.0",
     "postcss-preset-env": "^6.7.0",
+    "postcss-scss": "^3.0.4",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
     "stylefmt": "^6.0.3",
@@ -94,6 +94,6 @@
   "engines": {
     "node": "^10 || ^12 || >=14"
   },
-  "target": "web",
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "target": "web"
 }
