--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
   ],
   "dependencies": {
     "bootstrap": "^4.6.0",
-    "normalize.scss": "^0.1.0"
+    "classnames": "^2.2.6",
+    "normalize.scss": "^0.1.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
