--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "> 5%"
   ],
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.12.15",
     "bootstrap": "^4.6.0",
     "classnames": "^2.2.6",
     "normalize.scss": "^0.1.0",
@@ -96,6 +97,5 @@
   "engines": {
     "node": "^10 || ^12 || >=14"
   },
-  "proxy": "http://localhost:5000",
   "target": "web"
 }
